# KeyServer Change Log

v0.3.1
-------------------------------------------------------------------------------- 
Features:
  - 

Bug fixes:
  - SKI protocol draft-cairns-tls-session-key-interface-01 compliance.


v0.3.0
-------------------------------------------------------------------------------- 
Features:
  - Check latest version available for KeyServer on GitHub.
  - New code project architecture.
  - Contains more JUnit tests.
  - Private Key provisioning tool has been integrated inside KeyServer.

Bug fixes:
  - HTTPS certificate expiration date control.


v0.2.3
-------------------------------------------------------------------------------- 
Features:
  - Multiple JSON processing on same TLS session.
  - Improved security with IP access control.
  - Support more cipher suites on https server.
  - KeyServer Configuration more parametric.
  - Include KeyServer Private Key provider tool.


v0.1.3
-------------------------------------------------------------------------------- 
Features:
  - KeyServer accepts multiples connections (system default limited).
  - KeyServer log to a file.